--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-chartjs-2": "^3.0.4",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
-    "react-table": "^7.7.0"
+    "react-table": "^7.7.0",
+    "swr": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
